--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,12 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+@import url('https://fonts.googleapis.com/css2?family=Grand+Hotel&display=swap');
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
 }
+.grand-hotel-regular {
+  font-family: "Grand Hotel", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
+
 
 @media (prefers-color-scheme: dark) {
   :root {
@@ -17,6 +23,9 @@
 }
 
 body {
+  font-family: "Grand Hotel", cursive;
+  font-weight: 400;
+  font-style: normal;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
